The survey.html page is bare bones but it is there. Currently having trouble getting the bootstrap layout for the dropdown items to appear exactly as it was in the demo app, so I'm going to come back to this after working on the api links.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -25,7 +25,7 @@
     
         <footer class="footer">
           <div class="container">
-            <p><a href="/api/friends">API Table Link</a> | <a href="https://github.com/thomasxcox731/FriendFinder">Github Repo</a>
+            <p><a href="/api/friends">API Friends Link</a> | <a href="https://github.com/thomasxcox731/FriendFinder">Github Repo</a>
           </div>
         </footer>
     
